# src/controllers/auth.controllers.js
@@ -1,21 +1,20 @@
-import  { signUpService, isUserExist }  from '../services/auth.services';
-import sendEmail from '../helpers/mail.helper'; 
-import Helper from '../services/helper';
-import { worker } from 'cluster';
+import  { loginService, signUpService, isUserExist }  from '../services/auth.services';
+import { sendWelcomeEmail } from '../helpers/mail.helper';
+import Helper from '../services/helper'; 
 
 
 const signUp = async (request, response) => {
   try {
-    const result = await isUserExist(request.body.email)
+    const result = await isUserExist(request.body.email.toLowerCase());
     if(result) {
        return Helper.errorResponse(response, 409, {message: 'user already exists'})
     }
 
-    const value =  await signUpService(request.body);
+    const { user } =  await signUpService(request.body);
 
-    const { firstName, email } = value.user;
-
-    sendEmail(firstName, email, 'Welcome Mail');
+    const { firstName, email, confirmEmailCode } = user;
+    
+    sendWelcomeEmail(firstName, email, 'Welcome Mail', 'welcome-mail', confirmEmailCode);
     return response.status(201).json(value)
   } catch (error) {
     return response.status(500).json({ error: "internal server error"})
@@ -23,12 +22,12 @@ const signUp = async (request, response) => {
 }
 
 const login = async (request, response) => {
-  const value = await authService.loginService(request.body);
+  const value = await loginService(request.body);
   if (value) {
-    return response.status(201).json(value);
+    return response.status(200).json(value);
   } else {
     return response.status(400).json({
-      Error: 'Invalid credentials'
+      message: 'Invalid credentials'
     });
   }
 };
